test/conformance/chainsaw/generating-policies/exceptions/allowed-images/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: generate-cm-exclude-images
spec:
  policyRefs:
    - name: generate-cm-exclude-images
      kind: GeneratingPolicy
  # list of image names to exclude
  images:
  - public.ecr.aws/docker/library/busybox:latest
  - nginx:latest
