test/conformance/chainsaw/generating-policies/exceptions/allowed-images/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exceptions-allowed-images
