test/conformance/chainsaw/generating-policies/exceptions/allowed-images/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: exceptions-with-allowed-images
spec:
  steps:
  - name: create exception
    try:
    - create:
        file: exception.yaml
  - name: create namespace
    try:
    - create:
        file: namespace.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: generate-cm-exclude-images
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: create triggers
    try:
    - apply:
        file: triggers.yaml
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: check that the configmap is not generated for the bad resource pod
    try:
    - error:
        file: configmap-error.yaml
  - name: check that the configmap is generated in for the good resource pod
    try:
    - assert:
        file: configmap-assert.yaml
